<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier name</string>
    <string name="product_supplier_phone">Supplier phone number</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="add_new_product">Add new product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_successful">Product saved</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_failed">Error with saving product</string>
    <string name="empty_view_title_text">There are no products in inventory</string>
    <string name="empty_view_subtitle_text">Touch the + button to start adding products to inventory</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="name_required">Product name is required</string>
    <string name="quantity_required">Product quantity is required</string>
    <string name="price_required">Product price is required</string>
    <string name="supplier_name_required">Supplier name is required</string>
    <string name="supplier_phone_required">Supplier phone number is required</string>
    <string name="sale_product_successful">Product sold</string>
    <string name="sale_product_failed">Error with sale product</string>
    <string name="sale_product_no_quantity">Cannot sale product with 0 quantity</string>
    <string name="sale_product">Sale</string>
    <string name="increase_quantity">+</string>
    <string name="decrease_quantity">-</string>
    <string name="no_negative_quantity">Negative values are not allowed for quantity</string>
    <string name="order">Order</string>
    <string name="no_supplier_phone">No supplier phone number is provided</string>
</resources>
