<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.example.android.inventoryapp.EditActivity">

    <TextView
        android:id="@+id/name_label"
        style="@style/EditLabelFieldStyle"
        android:text="@string/product_name"
        app:layout_constraintBaseline_toBaselineOf="@id/product_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_name"
        android:inputType="textCapSentences"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_label"
        style="@style/EditLabelFieldStyle"
        android:text="@string/product_price"
        app:layout_constraintBaseline_toBaselineOf="@id/product_price"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_price"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <EditText
        android:id="@+id/product_price"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_price"
        android:inputType="number"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/price_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name" />

    <TextView
        android:id="@+id/quantity_label"
        style="@style/EditLabelFieldStyle"
        android:text="@string/product_quantity"
        app:layout_constraintBaseline_toBaselineOf="@id/product_quantity"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_quantity"
        app:layout_constraintTop_toBottomOf="@id/price_label" />

    <EditText
        android:id="@+id/product_quantity"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_quantity"
        android:inputType="number"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/quantity_label"
        app:layout_constraintRight_toLeftOf="@id/increase_quantity"
        app:layout_constraintTop_toBottomOf="@id/product_price" />

    <Button
        android:id="@+id/increase_quantity"
        style="@style/IncreaseDecreaseButton"
        android:text="@string/increase_quantity"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/product_quantity"
        app:layout_constraintRight_toRightOf="@id/decrease_quantity"
        app:layout_constraintTop_toBottomOf="@id/product_price" />

    <Button
        android:id="@+id/decrease_quantity"
        style="@style/IncreaseDecreaseButton"
        android:text="@string/decrease_quantity"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/increase_quantity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price" />

    <TextView
        android:id="@+id/supplier_name_label"
        style="@style/EditLabelFieldStyle"
        android:text="@string/product_supplier_name"
        app:layout_constraintBaseline_toBaselineOf="@id/supplier_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_quantity"
        app:layout_constraintTop_toBottomOf="@id/quantity_label" />

    <EditText
        android:id="@+id/supplier_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_supplier_name"
        android:inputType="textCapSentences"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/supplier_name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_quantity" />

    <TextView
        android:id="@+id/supplier_phone_label"
        style="@style/EditLabelFieldStyle"
        android:text="@string/product_supplier_phone"
        app:layout_constraintBaseline_toBaselineOf="@id/supplier_phone"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/supplier_phone"
        app:layout_constraintTop_toBottomOf="@id/supplier_name_label" />

    <EditText
        android:id="@+id/supplier_phone"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_supplier_phone"
        android:inputType="phone"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/supplier_phone_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/supplier_name" />

    <Button
        android:id="@+id/order_button"
        style="@style/OrderButton"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
