<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        style="@style/ProductNameStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_label"
        style="@style/ProductLabelStyle"
        android:text="@string/product_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/price"
        style="@style/ProductValuesStyle"
        app:layout_constraintBaseline_toBaselineOf="@id/price_label"
        app:layout_constraintLeft_toRightOf="@id/price_label" />

    <TextView
        android:id="@+id/quantity_label"
        style="@style/ProductLabelStyle"
        android:text="@string/product_quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_label" />

    <TextView
        android:id="@+id/quantity"
        style="@style/ProductValuesStyle"
        app:layout_constraintBaseline_toBaselineOf="@id/quantity_label"
        app:layout_constraintLeft_toRightOf="@id/quantity_label" />

    <Button
        android:id="@+id/sale"
        style="@style/SaleButton"
        android:text="@string/sale_product"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>